# mullvad-slint

./: .gitignore  Cargo.toml  README.md
flatpak/: .gitignore  build-flatpak.sh  net.mullvad.MullvadSlint.desktop  net.mullvad.MullvadSlint.yml
src/: api.rs  locations.json  main.rs  map.rs  map_marker_shader.wgsl  map_shader.wgsl  relays.json  rpc.rs  slint_ty.rs  split_tunneling.rs  tray.rs
ui/: app-window.slint  connecting-to-service.slint  connection.slint  dashboard.slint  feature-indicator.slint  main-header.slint  main-view.slint  menu-section.slint  palette.slint  relay-list.slint  route.slint  router.slint  select-location.slint  settings.slint  settings.ui  split-tunneling.slint  state.slint
