[package]
name = "mullvad-slint"
version = "0.1.0"
edition = "2024"

[package.metadata.bundle]
name = "Mullvad Slint"
identifier = "mullvadvpn-app.mullvad.net"
short_description = "A minimal Mullvad VPN example, in Slint!"
icon = ["./ui/images/icon.png"]

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.54", features = ["derive", "env"] }
# For rendering the 3d map
bytemuck = { version = "1.21", features = ["derive"], optional = true }
futures = "0.3.31"
glam = { version = "0.30.9", optional = true }
wgpu = { version = "28", optional = true }
image = { version = "0.25.8", default-features = false, features = [
  "default-formats",
  "jpeg",
  "png",
  "tiff",
  "webp"
] }
include_bytes_aligned = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.47.1", default-features = false, features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync"
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
zerocopy = { version = "0.8.31", features = ["derive", "std"] }
pollster = "0.4"

[dependencies.mullvad-management-interface]
git = "https://github.com/mullvad/mullvadvpn-app.git"
rev = "b32eb1aa15ba52b24af722c987b21e15e20a9816"  # 2026.1-beta1

[dependencies.mullvad-types]
git = "https://github.com/mullvad/mullvadvpn-app.git"
rev = "b32eb1aa15ba52b24af722c987b21e15e20a9816"  # 2026.1-beta1

[dependencies.slint]
version = "1.15.0"
default-features = false
features = [
  "accessibility",
  "backend-winit",
  "compat-1-2",
  "live-preview",
  "renderer-femtovg",
  "std",
  "unstable-wgpu-28",
]

[dependencies.talpid-types]
git = "https://github.com/mullvad/mullvadvpn-app.git"
rev = "b32eb1aa15ba52b24af722c987b21e15e20a9816"  # 2026.1-beta1

[build-dependencies]
slint-build = "1.14.1"

[target.'cfg(target_os = "linux")'.dependencies]
# For launching apps from split tunneling view
freedesktop-desktop-entry = "0.8.0"
freedesktop-icons = "0.4.0"
# Tray icon
tray-item = { version = "0.10.0", features = ["ksni"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
# HACK: we need to enable the "winerror" feature here because "parity-tokio-ipc" fails to compile
# It should be enabled by management interface
winapi = { version = "0.3", features = ["winerror"] }

[features]
default = ["map", "tray-icon"]
map = ["dep:wgpu", "dep:glam", "dep:bytemuck"]
tray-icon = ["dep:tray-item"]

[profile.dev]
opt-level = 1

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
